--- a/product_service/Jenkinsfile
+++ b/product_service/Jenkinsfile
@@ -1,11 +1,10 @@
 pipeline {
     agent any
 	environment {
-	  NEXUS_HOST = '192.168.99.100:8081'
-	  SONAR_HOST = 'http://192.168.99.100:9000'
+	  NEXUS_HOST = 'nexus:8081'
+	  SONAR_HOST = 'http://sonarqube:9000'
 	  NEXUS_USER = 'admin'
 	  NEXUS_PASSWOD = 'gabriel12'
-	  //DOCKER_VERSION = sh(returnStdout: true, script: """ echo \$(xmllint --xpath '/*[local-name()="project"]/*[local-name()="properties"]/*[local-name()="docker-version"]/text()' pom.xml) """)
 	  APP_VERSION = sh(returnStdout: true, script: """ echo \$(xmllint --xpath '/*[local-name()="project"]/*[local-name()="version"]/text()' pom.xml) """)
 	}
     stages {
@@ -14,6 +13,7 @@ pipeline {
                 echo 'Clean/Build'
 				sh 'echo $APP_VERSION'
                 sh 'mvnw clean install'
+                sh 'mvnw sonar:sonar -Dsonar.scm.disabled=true -Dsonar.host.url=$SONAR_HOST'
             }
         }
         stage('Test') {
@@ -22,11 +22,11 @@ pipeline {
                 sh 'mvnw test'
             }
         }
-        stage('Deploy') {
+        stage('Publish') {
             steps {
                 sh 'echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USER --password-stdin'
-				sh 'docker build . -t $NEXUS_HOST/spring-petclinic:$DOCKER_VERSION'
-                sh 'docker push $DOCKERHUB_USER/spring-petclinic:$DOCKER_VERSION'
+				sh 'docker build . -t $NEXUS_HOST/product-service:$DOCKER_VERSION'
+                sh 'docker push $DOCKERHUB_USER/product-service:$DOCKER_VERSION'
             }
         }
     }    
