--- a/product_service/Jenkinsfile
+++ b/product_service/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
 	environment {
 	  NEXUS_HOST = 'nexus:8081'
 	  SONAR_HOST = 'http://sonarqube:9000'
+      SONAR_TOKEN='1d9c085bcbae588bbb8cf89ee9d96e9ed9d4e443'
 	  NEXUS_USER = 'admin'
 	  NEXUS_PASSWOD = 'gabriel12'
 	  APP_VERSION = sh(returnStdout: true, script: """ echo \$(xmllint --xpath '/*[local-name()="project"]/*[local-name()="version"]/text()' product_service/pom.xml) """)
