--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -8,7 +8,7 @@ services:
       - '9000:9000'
     command:
        - -Dsonar.ce.javaOpts=-Xmx2048m -Dsonar.web.javaOpts=-Xmx2048m
-  nexus-v3:
+  nexus:
     build:
       context: ./nexus/
       dockerfile: Dockerfile
