--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -19,13 +19,15 @@ services:
       context: ./jenkins/
       dockerfile: Dockerfile
     environment:
-      - SONAR_TOKEN=78326fa3d16542f6f9a28d4b7ac2d1ecf8f169b7
+      - SONAR_TOKEN=018d08e7cb7dbab941eeb647246379b857716a97
     image: product-review
     container_name: jenkins-ci
     command: sh -c "(/var/tmp/start-configure-jenkins.sh&) && /usr/local/bin/jenkins.sh"
     ports:
       - '8080:8080'
       - '50000:50000'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       
     
 
