--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: ./sonarqube/
       dockerfile: Dockerfile
+    container_name: sonarqube
     ports:
       - '9000:9000'
     command:
@@ -12,6 +13,7 @@ services:
     build:
       context: ./nexus/
       dockerfile: Dockerfile
+    container_name: nexus
     ports:
       - '8081:8081'
   jenkins:
@@ -20,7 +22,6 @@ services:
       dockerfile: Dockerfile
     environment:
       - SONAR_TOKEN=018d08e7cb7dbab941eeb647246379b857716a97
-    image: product-review
     container_name: jenkins-ci
     command: sh -c "(/var/tmp/start-configure-jenkins.sh&) && /usr/local/bin/jenkins.sh"
     ports:
