--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -21,7 +21,7 @@ services:
       context: ./jenkins/
       dockerfile: Dockerfile
     environment:
-      - SONAR_TOKEN=018d08e7cb7dbab941eeb647246379b857716a97
+      - SONAR_TOKEN=<replace_your_token>
     container_name: jenkins-ci
     command: sh -c "(/var/tmp/start-configure-jenkins.sh&) && /usr/local/bin/jenkins.sh"
     ports:
