--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -21,7 +21,9 @@ services:
       context: ./jenkins/
       dockerfile: Dockerfile
     environment:
-      - SONAR_TOKEN=<replace_your_token>
+      - SONAR_TOKEN=809bf6c54393e1be953d599fabc99fc651bf7543
+      - NEXUS_USER=admin
+      - NEXUS_PASSWORD=admin123
     container_name: jenkins-ci
     command: sh -c "(/var/tmp/start-configure-jenkins.sh&) && /usr/local/bin/jenkins.sh"
     ports:
