--- a/product_service/pom.xml
+++ b/product_service/pom.xml
@@ -62,7 +62,7 @@
 				</executions>
 				<configuration>
 					<serverId>nexus</serverId>
-					<nexusUrl>http://nexus:8081/nexus/</nexusUrl>
+					<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
 					<skipStaging>true</skipStaging>
 				</configuration>
 			</plugin>
@@ -72,12 +72,12 @@
 		<repository>
 			<id>nexus</id>
 			<name>Internal Releases</name>
-			<url>http://nexus:8081/repository/maven-releases/</url>
+			<url>http://localhost:8081/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>nexus</id>
 			<name>Internal Snapshots</name>
-			<url>http://nexus:8081/repository/maven-snapshots/</url>
+			<url>http://localhost:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
