--- a/product_service/pom.xml
+++ b/product_service/pom.xml
@@ -62,22 +62,99 @@
 				</executions>
 				<configuration>
 					<serverId>nexus</serverId>
-					<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
+					<nexusUrl>http://${docker.user}:${docker.password}@nexus:8081/nexus/</nexusUrl>
 					<skipStaging>true</skipStaging>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<configuration><longModulepath>false</longModulepath></configuration>
+				<executions>
+					<!-- Remove existing image from local repo -->
+					<execution>
+					<id>docker-clean</id>
+					<phase>install</phase>
+					<goals>
+						<goal>exec</goal>
+					</goals>
+					<configuration>
+						<executable>docker</executable>
+						<workingDirectory>${project.basedir}</workingDirectory>
+						<arguments>
+						<argument>rmi</argument>
+						<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+						</arguments>
+					</configuration>
+					</execution>
+					<execution>
+					<id>docker-build</id>
+					<phase>install</phase>
+					<goals>
+						<goal>exec</goal>
+					</goals>
+					<configuration>
+						<executable>docker</executable>
+						<workingDirectory>${project.basedir}</workingDirectory>
+						<arguments>
+						<argument>build</argument>
+						<argument>-t</argument>
+						<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+						<argument>.</argument>
+						</arguments>
+					</configuration>
+					</execution>
+						<!-- Login and Push the image to a docker repo. -->
+					<execution>
+					<id>docker-login</id>
+					<phase>deploy</phase>
+					<goals>
+						<goal>exec</goal>
+					</goals>
+					<configuration>
+						<executable>docker</executable>
+						<workingDirectory>${project.basedir}</workingDirectory>
+						<arguments>
+						<argument>login</argument>
+						<argument>-u</argument>
+						<argument>${docker.user}</argument>
+						<argument>-p</argument>
+						<argument>${docker.password}</argument>
+						<argument>${docker.url}</argument>
+						</arguments>
+					</configuration>
+					</execution>
+					<execution>
+					<id>docker-push</id>
+					<phase>deploy</phase>
+					<goals>
+						<goal>exec</goal>
+					</goals>
+					<configuration>
+						<executable>docker</executable>
+						<workingDirectory>${project.basedir}</workingDirectory>
+						<arguments>
+						<argument>push</argument>
+						<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+						</arguments>
+					</configuration>
+					</execution>
+				</executions>
+				</plugin>
 		</plugins>
 	</build>
 	<distributionManagement>
 		<repository>
 			<id>nexus</id>
 			<name>Internal Releases</name>
-			<url>http://localhost:8081/repository/maven-releases/</url>
+			<url>http://${docker.user}:${docker.password}@nexus:8081/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>nexus</id>
 			<name>Internal Snapshots</name>
-			<url>http://localhost:8081/repository/maven-snapshots/</url>
+			<url>http://${docker.user}:${docker.password}@nexus:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
+
 </project>
