--- a/product_service/Jenkinsfile
+++ b/product_service/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
         }
         failure {
             echo 'JENKINS PIPELINE FAILED'
-            //deleteDir()
+            deleteDir()
         }
         unstable {
             echo 'JENKINS PIPELINE WAS MARKED AS UNSTABLE'
