--- a/product_service/pom.xml
+++ b/product_service/pom.xml
@@ -108,7 +108,7 @@
 						<!-- Login and Push the image to a docker repo. -->
 					<execution>
 					<id>docker-login</id>
-					<phase>deploy</phase>
+					<phase>publish</phase>
 					<goals>
 						<goal>exec</goal>
 					</goals>
@@ -127,7 +127,7 @@
 					</execution>
 					<execution>
 					<id>docker-push</id>
-					<phase>deploy</phase>
+					<phase>publish</phase>
 					<goals>
 						<goal>exec</goal>
 					</goals>
