--- a/product_service/Jenkinsfile
+++ b/product_service/Jenkinsfile
@@ -36,10 +36,17 @@ pipeline {
     post {
         success {
             echo 'Product service build finished'
+            dir('product_service'){
+               sh 'sudo mvn clean'
+            }
+            deleteDir()
         }
         failure {
             echo 'Product service pipeline failed'
-            
+            dir('product_service'){
+               sh 'sudo mvn clean'
+            }
+            deleteDir()
         }
         unstable {
             echo 'Product service PIPELINE WAS MARKED AS UNSTABLE'
