--- a/product_service/pom.xml
+++ b/product_service/pom.xml
@@ -85,6 +85,7 @@
 						<arguments>
 						<argument>rmi</argument>
 						<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+						<failOnError>false</failOnError>
 						</arguments>
 					</configuration>
 					</execution>
