--- a/product_service/pom.xml
+++ b/product_service/pom.xml
@@ -86,7 +86,10 @@
 						<argument>rmi</argument>
 						<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
 						</arguments>
-						<failOnError>false</failOnError>
+						<successCodes>
+							<successCode>0</successCode>
+							<successCode>1</successCode>
+						</successCodes>
 					</configuration>
 					</execution>
 					<execution>
