--- a/product_service/Jenkinsfile
+++ b/product_service/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                     sh 'echo $APP_VERSION'
                     sh 'sudo mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V'
                     echo 'Run sonar validation'
-                    sh 'sudo mvn sonar:sonar -Dsonar.scm.disabled=true -Dsonar.host.url=$SONAR_HOST'
+                    sh 'sudo mvn sonar:sonar -Dsonar.scm.disabled=true -Dsonar.host.url=$SONAR_HOST -Dsonar.password=$SONAR_TOKEN'
                 }
             }
         }
