--- a/product_service/Jenkinsfile
+++ b/product_service/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
         stage('Publish') {
             steps {
                 dir('product_service'){
-                    sh 'sudo mvn clean publish -Ddocker.url=http://$NEXUS_HOST -Ddocker.user=$NEXUS_USER -Ddocker.password=$NEXUS_PASSWORD'
+                    sh 'sudo mvn clean deploy -Ddocker.url=http://$NEXUS_HOST -Ddocker.user=$NEXUS_USER -Ddocker.password=$NEXUS_PASSWORD'
                 }
             }
         }
